# Fine-Tune

./: .gitignore  README.md  demo.ipynb  evaluation.ipynb  fine_tune.ipynb  knowledge_distil.ipynb  knowledge_distil_roberta_vs_distilbert.ipynb  pyproject.toml  zero_shot.ipynb  zero_shot.py
predictions/: BERT.csv  DistilBERT.csv  LoRA.csv  ModernBERT.csv  gpt-3.5.csv  gpt-4.csv
results/checkpoint-486/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
results/checkpoint-729/: adapter_config.json  adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
